test/syc/bad/multiplets.c
/*
 * Multiple type specifiers
 */

int struct foo a;
